MOSIP-34762 resolved captcha alignment issue

--- a/keycloak-artemis/mosip_keycloak_theme/src/keycloak-theme/login/KcApp.css
+++ b/keycloak-artemis/mosip_keycloak_theme/src/keycloak-theme/login/KcApp.css
@@ -119,7 +119,8 @@ a#kc-current-locale-link::after{
 
 .g-recaptcha {
     transform: scale(1.08);
-    margin-left: 17px;
+    margin-left: 20px;
+	margin-right: 20px;
 }
 
 .kcButtonClass:disabled{
